RESOLVED FIXED182516
[Win] Release assert failed under NetworkStateNotifier::singleton.
https://bugs.webkit.org/show_bug.cgi?id=182516
Summary [Win] Release assert failed under NetworkStateNotifier::singleton.
Per Arne Vollan
Reported 2018-02-05 15:41:28 PST
STACK_TEXT: 0a61f530 6b7b88c0 6c01e005 00000000 963bbf72 WTF!WTFCrash+0x10 0a61f534 6c01e005 00000000 963bbf72 0a61f594 WebKit!WebCore::NetworkStateNotifier::singleton+0x10 0a61f544 77da4203 00000000 00000000 d4ab7e4b WebKit!WebCore::NetworkStateNotifier::addressChangeCallback+0x15 0a61f594 77db5074 0a61f6e4 008c6f08 008b6600 ntdll!RtlpTpWaitCallback+0x93 0a61f5c0 77db4fc8 00000000 77db4f40 008b66f8 ntdll!TppExecuteWaitCallback+0x8c 0a61f5dc 77db4063 0a61f6e4 008b66f8 008b6600 ntdll!TppWaitCompletion+0x88 0a61f7d0 75978654 008007b0 75978630 b14d114c ntdll!TppWorkerThread+0x7e3 0a61f7e4 77de4a77 008007b0 d4ab73f3 00000000 kernel32!BaseThreadInitThunk+0x24 0a61f82c 77de4a47 ffffffff 77e09f0a 00000000 ntdll!__RtlUserThreadStart+0x2f 0a61f83c 00000000 77db3880 008007b0 00000000 ntdll!_RtlUserThreadStart+0x1b
Attachments
Patch (2.04 KB, patch)
2018-02-05 15:49 PST, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2018-02-05 15:41:57 PST
Per Arne Vollan
Comment 2 2018-02-05 15:49:57 PST
Brent Fulgham
Comment 3 2018-02-05 16:24:12 PST
Comment on attachment 333128 [details] Patch r=me.
Per Arne Vollan
Comment 4 2018-02-05 16:25:55 PST
Comment on attachment 333128 [details] Patch Thanks for reviewing!
WebKit Commit Bot
Comment 5 2018-02-05 16:49:27 PST
Comment on attachment 333128 [details] Patch Clearing flags on attachment: 333128 Committed r228143: <https://trac.webkit.org/changeset/228143>
WebKit Commit Bot
Comment 6 2018-02-05 16:49:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.