[Win] Release assert failed under NetworkStateNotifier::singleton. https://bugs.webkit.org/show_bug.cgi?id=182516

Reviewed by Brent Fulgham.

The callback NetworkStateNotifier::addressChangeCallback will always be called on a
worker thread on Windows. Since the method NetworkStateNotifier::singleton() is
called by NetworkStateNotifier::addressChangeCallback, but has to be called on the
on the main thread, the call has to be moved there.

No new tests. I have not been able to reproduce the crash.

* platform/network/win/NetworkStateNotifierWin.cpp:
(WebCore::NetworkStateNotifier::addressChangeCallback):


Canonical link: https://commits.webkit.org/198313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228143 268f45cc-cd09-0410-ab3c-d52691b4dbfc